objects/AgileVizArt__Epic_Story__c.object
<CustomObject>
    <description>Used to define building blocks and components. These so-called epic stories group user stories, bugs and issues. You may create sub epic stories to break-down building blocks into components and sub components or processes</description>
    <fields>
        <fullName>AgileVizArt__Description_No_HTML__c</fullName>
        <description>Used in board to display only text without HTML tags. This field is automatically populated by a workflow rule.</description>
        <label>Description (without HTML)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Effort_Points__c</fullName>
        <inlineHelpText>Defines a rough estimate on effort to deliver this epic story. Estimation is based in relation to other epic stories</inlineHelpText>
        <label>Effort Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__End_User_Category__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determine if the epic story display in log user story.</inlineHelpText>
        <label>End User Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Epic_Story_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(AgileVizArt__Epic_Story_Number__c)),&quot;ES-&quot; &amp; TEXT(AgileVizArt__Epic_Story_Number__c), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique id for epic story by project</inlineHelpText>
        <label>Epic Story#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Epic_Story_Number__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <inlineHelpText>Defines a unique epic story number by project</inlineHelpText>
        <label>Epic Story Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Global_Id__c</fullName>
        <displayFormat>GES-{0}</displayFormat>
        <inlineHelpText>Provides an unique id for this epic story across all projects. Use this number to find epic stories uniquely.</inlineHelpText>
        <label>Global Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this epic story is completed and should not be shown in the story board any longer.</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Epic_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Parent_Epic_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Define parent epic stories if you want to group epic stories</inlineHelpText>
        <label>Parent Epic Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__Epic_Story__c.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Epic_Story__c</referenceTo>
        <relationshipLabel>Sub Epic Stories</relationshipLabel>
        <relationshipName>Sub_Epic_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Priority_Ordered__c</fullName>
        <description>Used to order in lists by priority</description>
        <formula>CASE(AgileVizArt__Priority__c,
&quot;Must&quot;, &quot;1. Must&quot;,
&quot;Should&quot;, &quot;2. Should&quot;,
&quot;Could&quot;, &quot;3. Could&quot;,
&quot;Would&quot;, &quot;4. Would&quot;,
&quot;4. Would&quot;)</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Priority__c</fullName>
        <inlineHelpText>Define importance of your epic stories using MoSCoW method</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must</fullName>
                </value>
                <value>
                    <fullName>Should</fullName>
                </value>
                <value>
                    <fullName>Could</fullName>
                </value>
                <value>
                    <fullName>Would</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Name__c</fullName>
        <description>Used mainly in background to pass into master detail relationship lookups</description>
        <formula>AgileVizArt__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AgileVizArt__Project__c</referenceTo>
        <relationshipLabel>Epic Stories</relationshipLabel>
        <relationshipName>Epic_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Rank_ReadOnly__c</fullName>
        <description>Used only to prevent administrators to edit it.</description>
        <formula>AgileVizArt__Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines rank of user stories within priority</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Rank__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>an additional lookup field with project filter matches release project</description>
        <inlineHelpText>Select release for release planning</inlineHelpText>
        <label>Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AgileVizArt__Release__c.AgileVizArt__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AgileVizArt__Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>AgileVizArt__Release__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Release</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AgileVizArt__Release__c</referenceTo>
        <relationshipLabel>Epic Stories</relationshipLabel>
        <relationshipName>Epic_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used for optimistic concurrency handling</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Epic Story</label>
    <listViews>
        <fullName>AgileVizArt__All</fullName>
        <columns>NAME</columns>
        <columns>AgileVizArt__Priority_Ordered__c</columns>
        <columns>AgileVizArt__Description__c</columns>
        <columns>AgileVizArt__Owner__c</columns>
        <columns>AgileVizArt__Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Epic_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Epic Stories</label>
    </listViews>
    <nameField>
        <label>Epic Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epic Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>